--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,5 +1,35 @@
-<!doctype html><html><head><title>Dashboard</title></head><body>
-{% if current_user.is_authenticated %}<a href="{{url_for('logout')}}">Logout</a>{% endif %}
-<hr>{% block body %}{% endblock %}
-</body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="apple-touch-icon" sizes="76x76" href="{{ url_for('static',filename='assets/img/apple-icon.png') }}" />
+	<link rel="icon" type="image/png" href="{{ url_for('static',filename='assets/img/favicon.png') }}" />
+	<title>DEBIN LICENSE</title>
+	<!--     Fonts and icons     -->
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
+	<!-- Font Awesome Icons -->
+	<script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+	<!-- Nucleo Icons -->
+	<link href="{{ url_for('static',filename='assets/css/nucleo-icons.css') }}" rel="stylesheet" />
+	<link href="{{ url_for('static',filename='assets/css/nucleo-svg.css') }}" rel="stylesheet" />
+	<!-- Main Styling -->
+	<link href="{{ url_for('static',filename='assets/css/argon-dashboard-tailwind.css') }}" rel="stylesheet" />
+</head>
 
+<body class="m-0 font-sans text-base antialiased font-normal dark:bg-slate-900 leading-default bg-gray-50 text-slate-500">
+	<div class="container sticky top-0 z-sticky">
+		<div class="flex flex-wrap -mx-3">
+			<div class="w-full max-w-full px-3 flex-0">
+			</div>
+		</div>
+	</div>
+
+	{% if current_user.is_authenticated %}{% endif %}
+	{% block body %}{% endblock %}
+<!-- plugin for scrollbar  -->
+<script src="{{ url_for('static',filename='assets/js/plugins/perfect-scrollbar.min.js') }}" async></script>
+<!-- main script file  -->
+<script src="{{ url_for('static',filename='assets/js/argon-dashboard-tailwind.js') }}" async></script>
+</html>
